# anta-vista

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  PROGRESS.md  README.md  SKILL.md  av-cli_implementation_plan.md  av_probe_implementation_plan.md  issues  spec.md
.cursor/plans/: adversarial_test_suite_13c31df8.plan.md
.github/workflows/: ci.yml
crates/av-cli/: Cargo.toml
crates/av-cli/src/: download.rs  lib.rs  listener.rs  main.rs  network.rs  output.rs  startup.rs
crates/av-cli/src/cmd/: index.rs  listen.rs  mod.rs  name.rs  propagate.rs  purge.rs  rate.rs  resolve.rs  search.rs  status.rs
crates/av-cli/tests/: cli_tests.rs
crates/av-core/: Cargo.toml
crates/av-core/src/: config.rs  constants.rs  error.rs  lib.rs  paths.rs  types.rs
crates/av-core/tests/: config.rs
crates/av-embed/: Cargo.toml
crates/av-embed/src/: error.rs  lib.rs  minilm.rs  mock.rs  normalize.rs  provider.rs
crates/av-embed/tests/: embedding.rs
crates/av-index/: Cargo.toml
crates/av-index/src/: error.rs  filter.rs  index.rs  lib.rs  naming.rs  search.rs
crates/av-index/tests/: local_search.rs
crates/av-ingest/: Cargo.toml
crates/av-ingest/src/: describe.rs  error.rs  filename.rs  ingest.rs  lib.rs  location.rs  metadata.rs  mime.rs
crates/av-ingest/tests/: pipeline.rs
crates/av-net-x0x/: Cargo.toml
crates/av-net-x0x/src/: client.rs  direct_listener.rs  dispatcher.rs  envelope.rs  error.rs  lib.rs  listener.rs  mock.rs  payloads.rs
crates/av-net-x0x/tests/: net.rs
crates/av-probe/: Cargo.toml
crates/av-probe/src/: cli.rs  lib.rs  main.rs  output.rs  probe.rs  seed.rs
crates/av-probe/src/tests/: helpers.rs  mod.rs  naming.rs  search.rs  transport.rs  trust.rs
crates/av-probe/tests/: integration_tests.rs
crates/av-query/: Cargo.toml
crates/av-query/src/: abuse.rs  cluster.rs  error.rs  guard.rs  lib.rs  metrics.rs  rate_limit.rs
crates/av-query/tests/: query.rs
crates/av-store/: Cargo.toml
crates/av-store/src/: db.rs  lib.rs  schema.rs
crates/av-store/src/repo/: claims.rs  embeddings.rs  feedback.rs  mod.rs  names.rs  peers.rs  query_cache.rs  relevance.rs  resources.rs  trust.rs
crates/av-store/tests/: integration.rs  on_disk.rs
crates/av-test-suite/: Cargo.toml
crates/av-test-suite/src/: attacks.rs  fixtures.rs  generators.rs  lib.rs  x0x_harness.rs
crates/av-test-suite/tests/: av_core.rs  av_embed.rs  av_index.rs  av_ingest.rs  av_net_x0x.rs  av_query.rs  av_store.rs  av_trust.rs  integration_config_mismatch.rs  integration_persistence_tamper.rs  integration_pipeline_poisoning.rs  integration_query_abuse.rs  integration_x0x_receive_path.rs  x0x_live_daemon.rs
crates/av-trust/: Cargo.toml
crates/av-trust/src/: agreement.rs  decay.rs  error.rs  feedback.rs  lib.rs  ranking.rs  update.rs
crates/av-trust/tests/: trust.rs
docs/: config.md  known-limitations.md  protocol.md  ranking.md  threat-model.md
examples/: Cargo.toml
examples/examples/: local_search.rs  p2p_two_nodes.rs
scripts/: build-probe.sh
