[workspace]
members = [
    "crates/av-core",
    "examples",
    "crates/av-store",
    "crates/av-ingest",
    "crates/av-embed",
    "crates/av-index",
    "crates/av-net-x0x",
    "crates/av-trust",
    "crates/av-query",
    "crates/av-test-suite",
    "crates/av-probe",
    "crates/av-cli",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6"
unicode-normalization = "0.1"
av-core = { path = "crates/av-core" }
av-store = { path = "crates/av-store" }
av-embed = { path = "crates/av-embed" }
av-ingest = { path = "crates/av-ingest" }
av-index = { path = "crates/av-index" }
av-trust = { path = "crates/av-trust" }
av-net-x0x = { path = "crates/av-net-x0x" }
av-query = { path = "crates/av-query" }
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3"
infer = "0.16"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
toml = "0.8"
proptest = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
