[package]
name = "av-core"
version = "0.1.0"
edition = "2024"
description = "Core domain types for anta-vista"

[dev-dependencies]
tempfile = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
directories = { workspace = true }
unicode-normalization = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
