[package]
name = "av-embed"
version = "0.1.0"
edition = "2024"
description = "Embedding generation for anta-vista"

[dependencies]
av-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
fastembed = { version = "4", default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }

[dev-dependencies]
tempfile = "3"
