[package]
name = "av-ingest"
version = "0.2.0"
edition = "2024"
description = "Resource ingestion pipeline for anta-vista"

[dependencies]
av-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
infer = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
kamadak-exif = "0.5"
id3 = "1"

[dev-dependencies]
tempfile = { workspace = true }
