[package]
name = "av-net-x0x"
version = "0.1.0"
edition = "2024"
description = "x0x network transport layer for anta-vista"

[dependencies]
av-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
