[package]
name = "av-query"
version = "0.1.0"
edition = "2024"
description = "Query orchestration, cold-start clustering and anti-abuse for anta-vista"

[dependencies]
av-core    = { workspace = true }
av-store   = { workspace = true }
av-trust   = { workspace = true }
av-net-x0x = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
rusqlite     = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
