[package]
name = "av-store"
version = "0.1.0"
edition = "2024"
description = "Persistent storage layer for anta-vista"

[dependencies]
av-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
