[package]
name = "av-trust"
version = "0.2.0"
edition = "2024"
description = "Trust scoring, feedback aggregation and ranking for anta-vista"

[dependencies]
av-core  = { workspace = true }
av-store = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
rusqlite     = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
